src/objects/Disbursement__c.object
<CustomObject>
    <description>Holds all loan disbursement funds data</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Disbursed__c</fullName>
        <label>Date Disbursed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursement_Number__c</fullName>
        <label>Disbursement Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <description>Associates the Disbursement record to the corresponding Loan</description>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Disbursed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Disbursement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Disbursement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>